# personal-lora-flux-dev

./: .gitignore  README.md  magnitude_artifacts_training_steps_count.csv  pyproject.toml  rank_comparison.ipynb  res_florencer16.csv  res_keyword.csv  results_imagesize.ipynb
eval/: eval.py  test_eval.ipynb
lora_eval_Geppner/: magnitude_artifacts.ipynb  res_florence.csv  res_florence1024.csv  res_gpt4o.csv  resolution_comparison.ipynb
lora_eval_Geppner/loras/personal-lora-fluxdev-florence2/: dataset.toml
lora_eval_Geppner/loras/personal-lora-fluxdev-florence2-1024/: dataset.toml
lora_eval_Geppner/loras/personal-lora-fluxdev-florence2-r16/: README.md  dataset.toml  sample_prompts.txt
lora_eval_Geppner/loras/personal-lora-fluxdev-gpt4ocaptions/: dataset.toml  sample_prompts.txt  train.sh
lora_eval_Geppner/loras/personal-lora-fluxdev-keyword/: dataset.toml
loras/personal-lora-fluxdev-florence2/: README.md  train.sh
loras/personal-lora-fluxdev-florence2-1024/: README.md  train.sh
loras/personal-lora-fluxdev-florence2-r16/: train.sh
loras/personal-lora-fluxdev-gpt4ocaptions/: README.md
loras/personal-lora-fluxdev-keyword/: README.md  train.sh
