[project]
name = "lora-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "openai>=1.61.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.6.1",
    "scikit-misc>=0.5.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchmetrics[image,multimodal]>=1.6.1",
    "tqdm>=4.67.1",
]
